Added docker related memory setting env var to Dockerfile